<resources>
    <string name="app_name">FragmentStudy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sing_up">SING UP</string>
    <string name="username">Username</string>
    <string name="hint">hint</string>
    <string name="password">password</string>
    <string name="register">REGISTER</string>
    <string name="welcome">WELCOME!</string>
    <string name="login">LOGIN</string>
</resources>